--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BikeShare"
         tools:targetApi="31">
+        <activity
+            android:name=".activity_principal"
+            android:exported="false" />
+        <activity
+            android:name=".activity_cadastrar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
