--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity_principal"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activity_cadastrar"
             android:exported="true">
@@ -37,6 +37,8 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
     </application>
 
 </manifest>
