--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
+
+        plugins {
+            id 'com.android.application' version '8.0.2' apply false
+            id 'com.android.library' version '8.0.2' apply false
 }
+true // Needed to make the Suppress annotation work for the plugins block
