--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
 
+    implementation 'com.google.android.material:material:1.3.0'
+
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 }
